syntax="proto3";

option go_package = "go-grpc-example/user";

message UserRequest {
    string email = 1;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    int32 age = 4;
}

service User {
    rpc UnaryGetUser(UserRequest) returns (UserResponse) {}
}